[ORN-1316] [ORN-1327] Fix jobmaker UI styles (#3857)
* add declare and remove declaration

* fix test failing

* temporary disabled claim and cancel claim

* fix linting

* remove claim from texts

* Revert "Feature/orn 1316 (#3838)"

This reverts commit b6b035f7b3e68acdbfc3d492bcbdbdf6b132e13a.

* Merged master

* - remove coming soon and tool tip
-fix nomination not responsive

* fix underline

* fix test to use findComponentWithTestId

* add Employee updates coming soon tooltip

* add null to nomination test
fix locaiton of tooltips

* revert JobMaker table file and fix tooltip & dropdown

--- a/src/modules/stp/reportingCentre/jobMaker/components/NominationPopover.module.css
+++ b/src/modules/stp/reportingCentre/jobMaker/components/NominationPopover.module.css
@@ -5,3 +5,7 @@
 .atoPopOver a > svg {
   fill: var(--flx-color-link);
 }
+
+.aBtn:hover {
+  cursor: pointer;
+}
